salesforce-analytics-cloud/3.1/modules/ROOT/pages/index.adoc
= Salesforce Einstein Analytics Cloud Connector - Mule 4
:page-aliases: connectors::salesforce/salesforce-analytics-connector.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

Salesforce Einstein Analytics Connector v3.1

Anypoint Connector for Salesforce Analytics Cloud (Salesforce Analytics Connector) enables you to connect to the Salesforce Analytics Cloud application using the Salesforce External Data API. The connector exposes convenient methods for creating, deleting and populating data sets into Salesforce Analytics Cloud system. Load data into Analytics Cloud from many different data sources whether they are on-premise or on the cloud. Go beyond .csv files with this connector.

Release Notes: xref:release-notes::connector/salesforce-analytics-connector-release-notes-mule-4.adoc[Salesforce Einstein Analytics Connector Release Notes] +
Exchange: https://www.mulesoft.com/exchange/com.mulesoft.connectors/mule-sfdc-analytics-connector/[Salesforce Einstein Analytics Connector]

== Prerequisites

To use this information, you should be familiar with Salesforce Analytics, Mule, Anypoint Connectors, Anypoint Studio, Mule concepts, elements in a Mule flow, and Global Elements.

You need login credentials to test your connection to your target resource.

For software requirements and compatibility information, see the Connector Release Notes.

== POM File Information

[source,xml,linenums]
----
<dependency>
  <groupId>com.mulesoft.connectors</groupId>
  <artifactId>mule-sfdc-analytics-connector</artifactId>
  <version>RELEASE</version>
  <classifier>mule-plugin</classifier>
</dependency>
----

Mule converts RELEASE to the latest version. To specify a version, view
https://www.mulesoft.com/exchange/com.mulesoft.connectors/mule-sfdc-analytics-connector/[Salesforce Einstein Analytics Connector]
in Anypoint Exchange and click *Dependency Snippets*.

== Connect in Design Center

. In Design Center, click a trigger such as this connector as they trigger, HTTP Listener,or Scheduler trigger.
. To create an optional global element for the connector, you can choose from the following options. More information is provided in the sections that follow, and links to Salesforce documents are listed in the See Also section of this document.
+
* Required Parameters for Basic Username Password Authentication
* Required Parameters for the OAuth 2.0 Configuration
* Required Parameters for the OAuth 2.0 JWT Bearer Configuration
* Required Parameters for the OAuth 2.0 SAML Bearer Configuration
+
image::salesforce-analytics-choose-global-type.png[Choose Global Type]
+
. Select the plus sign to add a component.
. Select the connector as a component.
. Configure these fields for Upload external data into new dataSet and start processing operation:
+
** Type - Type of the records to be inserted. You need to upload a JSON file representing the schema of the dataset to be created.
** Records - Data sense expression; the records to be inserted
** Operation - Which operation to use when you’re loading data into the DataSet
** Description
** Label
** Data Set Name
+
image::salesforce-analytics-upload-and-start.png[Upload and start processing]

=== Required Parameters for Basic Username Password Authentication

* Username: Enter the Salesforce Analytics username.
* Password: Enter the corresponding password.
* Security Token: Enter the corresponding security token.

image::salesforce-analytics-dc-basic-auth.png[Basic Authentication]

=== Required Parameters for the OAuth 2.0 Configuration

* Consumer Key - The consumer key for the Salesforce connected app.
* Consumer Secret - The consumer secret for the connector to access Salesforce.

image::salesforce-analytics-dc-oauth.png[OAuth Authentication]

=== Required Parameters for the OAuth 2.0 JWT Bearer Configuration

* Consumer Key - The consumer key for the Salesforce connected app.
* Keystore File - See Generating a Keystore File.
* Store Password - The password for the keystore.
* Principal - The Salesforce username that you want to use.

image::salesforce-analytics-dc-jwt.png[JWT Bearer Configuration]

==== Required Parameters for the OAuth 2.0 SAML Bearer Configuration

* Consumer Key - The consumer key for the Salesforce connected app.
* Keystore File - The path to the key store used to sign data during authentication* Only Java key store format is allowed.
* Store Password - Key store password
* Principal - Username of desired Salesforce user

image::salesforce-analytics-saml.png[SAML Bearer Configuration]

==== Generating a Keystore File

The Keystore is the path to the keystore used to sign data during authentication. Only Java keystore format is allowed.

To generate a keystore file:

. Go to your Mule workspace, and open the command prompt (for Windows) or Terminal (for Mac).
. Type `keytool -genkeypair -alias salesforce-cert -keyalg RSA -keystore salesforce-cert.jks` and press enter.
. Enter the following details:
+
** Password for the keystore.
** Your first name and last name.
** Your organization unit.
** Name of your city, state, and the two letter code of your county.
+
The system generates a java keystore file containing a private/public key pair in your workspace.
+
. Provide the file path for the Keystore in your connector configuration.
+
Type `keytool -exportcert -alias salesforce-cert -file salesforce-cert.crt -keystore salesforce-cert.jks` and press enter.
+
The system now exports the public key from the keystore into the workspace. This is the public key that you need to enter in your Salesforce instance.
+
. Make sure that you have both the keystore (salesforce-cert.jks)
and the public key (salesforce-cert.crt) files in your workspace.

== Add the Connector to a Studio Project

Anypoint Studio provides two ways to add the connector to your Studio project: from the Exchange button in the Studio taskbar or from the Mule Palette view.

=== Add the Connector Using Exchange

. In Studio, create a Mule project.
. Click the Exchange icon *(X)* in the upper-left of the Studio task bar.
. In Exchange, click *Login* and supply your Anypoint Platform username and password.
. In Exchange, search for "analytics".
. Select the connector and click *Add to project*.
. Follow the prompts to install the connector.

=== Add the Connector in Studio

. In Studio, create a Mule project.
. In the Mule Palette view, click *(X) Search in Exchange*.
. In *Add Modules to Project*, type "analytics" in the search field.
. Click this connector's name in *Available modules*.
. Click *Add*.
. Click *Finish*.

=== Configure in Studio

. Drag the connector to the Studio canvas.
. To create a global element for the connector, set these fields:
+
* Basic Authentication:
** Username: Enter the Salesforce username.
** Password: Enter the corresponding password.
** Security Token: Enter the corresponding security token.
+
image::salesforce-analytics-basic.png[Basic Authentication]
+
* OAuth 2.0:
** Consumer Key - The consumer key for the Salesforce connected app.
** Consumer Secret - The consumer secret for the connector to access Salesforce.
+
image::salesforce-analytics-oauth.png[OAuth Authentication]
+
* OAuth 2.0 JWT:
** Consumer Key - The consumer key for the Salesforce connected app.
** Keystore File - See Generating a Keystore File.
** Store Password - The password for the keystore.
** Principal - The password for the keystore.
+
image::salesforce-analytics-jwt.png[OAuth 2.0 JWT Authentication]
+
* OAuth 2.0 SAML:
** Consumer Key - The consumer key for the Salesforce connected app.
** Keystore File - See Generating a Keystore File.
** Store Password - The password for the keystore.
** Principal - The password for the keystore.
+
image::salesforce-analytics-saml.png[OAuth 2.0 SAML Authentication]
+
. Configure these fields for upload external data into new dataSet and start processing operation:
** Type - Type of the records to insert. Select a JSON file representing the schema of the dataset to be created.
** Records - DataSense expression - the records to be inserted.
** Operation - Which operation to use when you’re loading data into a data set.
** Description
** Label
** Data Set Name
+
image::salesforce-analytics-studio-upload-and-start.png[Upload external data]

== Use Case: Studio

This use case provides an example of how to use the Salesforce Analytics Connector and contains this end to end flow:

* A trigger represented by the HTTP listener.
* A Salesforce Analytics configuration containing a username, password, and the security token.
* A Salesforce Analytics operation with the parameters to use.

The example that follows contains these components:

* HTTP Listener - Accepts data from http requests.
* Transform Message - Provides the records input data required by Salesforce analytics connector.

[source,dataweave,linenums]
----
%dw 2.0
---
output application/java
[
	{
		"Id": 1,
		"Country": "Country",
		"City": "City",
		"Year": 428742153,
		"Distance": 284644936,
		"Currencies":
		[
			"EUR",
			"USD"
		],
		"CreationDate": "20/12/2017" as Date {format: "dd/MM/yyyy"}
	},
	{
		"Id": 2,
		"Country": "Country",
		"City": "City",
		"Year": 1432651434,
		"Distance": 1336594394,
		"Currencies":
		[
			"EUR",
			"USD",
			"HUF"
		],
		"CreationDate": "20/12/2017" as Date {format: "dd/MM/yyyy"}
	}
]
----

* Salesforce Analytics connector - Connects with Salesforce, and performs an operation to push data into Salesforce Analytics.

image::salesforce-analytics-studio-use-case.png[Use case]

== Use Case: XML

Paste this XML code into Anypoint Studio to experiment with the flow described in the previous section.
Keep in mind that you still have to provide the metadata.json file describing the schema of the
dataset to be created.

[source,xml,linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:salesforce-analytics="http://www.mulesoft.org/schema/mule/salesforce-analytics"
xmlns:ee="http://www.mulesoft.org/schema/mule/ee/core"
xmlns:http="http://www.mulesoft.org/schema/mule/http"
xmlns:file="http://www.mulesoft.org/schema/mule/file"
xmlns="http://www.mulesoft.org/schema/mule/core"
xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
xsi:schemaLocation="http://www.mulesoft.org/schema/mule/core
http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/file
http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
http://www.mulesoft.org/schema/mule/http
http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/ee/core
http://www.mulesoft.org/schema/mule/ee/core/current/mule-ee.xsd
http://www.mulesoft.org/schema/mule/salesforce-analytics
http://www.mulesoft.org/schema/mule/salesforce-analytics/current/mule-salesforce-analytics.xsd">
 	<configuration-properties file="mule-app.properties" />
	<http:listener-config name="HTTP_Listener_config" doc:name="HTTP Listener config" >
		<http:listener-connection host="0.0.0.0" port="8081" />
	</http:listener-config>
	<salesforce-analytics:salesforce-analytics-config
	  name="Salesforce_Analytics_Salesforce_Analytics"
	  doc:name="Salesforce Analytics Salesforce Analytics" >
		<salesforce-analytics:basic-connection username="${salesforce.username}"
		   password="${salesforce.password}" securityToken="${salesforce.securityToken}"
		   url="${salesforce.url}"/>
	</salesforce-analytics:salesforce-analytics-config>
	<flow name="upload-all-in-one-with-append" >
		<http:listener doc:name="Listener" config-ref="HTTP_Listener_config" path="append"/>
		<ee:transform doc:name="Transform Message" >
			<ee:message >
				<ee:set-payload ><![CDATA[%dw 2.0
output application/java
---
[
	{
		"Id": 1,
		"Country": "Country",
		"City": "City",
		"Year": 428742153,
		"Distance": 284644936,
		"Currencies":
		[
			"EUR",
			"USD"
		],
		"CreationDate": "20/12/2017" as Date {format: "dd/MM/yyyy"}
	},
	{
		"Id": 2,
		"Country": "Country",
		"City": "City",
		"Year": 1432651434,
		"Distance": 1336594394,
		"Currencies":
		[
			"EUR",
			"USD",
			"HUF"
		],
		"CreationDate": "20/12/2017" as Date {format: "dd/MM/yyyy"}
	}
]]]></ee:set-payload>
			</ee:message>
		</ee:transform>
		<salesforce-analytics:upload-external-data-into-new-data-set-and-start-processing
		  doc:name="Upload external data into new data set and start processing"
		  config-ref="Salesforce_Analytics_Salesforce_Analytics" operation="APPEND"
		  description="${allInOne.dataSetDescription}" label="${allInOne.dataSetLabel}"
		  dataSetName="${allInOne.dataSetName}" edgemartContainer="${allInOne.dataSetContainerName}"
		  type="metadata.json" notificationSent="ALWAYS" notificationEmail="${notification.email}"/>
	</flow>
</mule>
----

== See Also

* https://developer.salesforce.com/docs/atlas.en-us.bi_dev_guide_ext_data.meta/bi_dev_guide_ext_data/[Salesforce External Data API].
* For Required Parameters for Basic Username Password Authentication see https://developer.salesforce.com/docs/atlas.en-us.api.meta/api/sforce_api_calls_login.htm[Salesforce Basic Authentication]
* For Required Parameters for the OAuth 2.0 Configuration see https://help.salesforce.com/apex/HTViewHelpDoc?id=remoteaccess_oauth_web_server_flow.htm&language=en_US[Salesforce OAuth 2.0]
* For Required Parameters for the OAuth 2.0 JWT Bearer Configuration see https://help.salesforce.com/HTViewHelpDoc?id=remoteaccess_oauth_jwt_flow.htm[Salesforce OAuth 2.0 JWT Bearer]
* For Required Parameters for the OAuth 2.0 SAML Bearer Configuration see https://help.salesforce.com/apex/HTViewHelpDoc?id=remoteaccess_oauth_SAML_bearer_flow.htm&language=en_US[Salesforce OAuth 2.0 SAML Bearer]
* https://help.mulesoft.com[MuleSoft Help Center]
